fixed z-index menu

--- a/assets/styles/scss/layout/_navigation.scss
+++ b/assets/styles/scss/layout/_navigation.scss
@@ -1,4 +1,6 @@
 nav.nav-main {
+	position: relative;
+	z-index: 5;
 	ul {
 		@include clearfix;
 		li {
